# spades

./: .gitignore  Cargo.toml  README.md
assets/sprites/: card.ron
assets/texture/: card_spritesheet.ron
config/: bindings.ron  display.ron
src/: bundle.rs  card.rs  deck.rs  hand.rs  main.rs  spades.rs  state.rs  suit.rs
src/systems/: hover.rs  mod.rs  play_card.rs
